--- a/style/explore.css
+++ b/style/explore.css
@@ -116,6 +116,29 @@
     display: none;
   }
 }
+@media (min-width: 768px) and (max-width: 1023px) {
+  #explore .content {
+    height: 908px;
+  }
+  #explore .content p {
+    display: none;
+  }
+  #explore .content .meninas-content {
+    margin-top: 40px;
+    width: 728px;
+    height: 705px;
+  }
+  #explore .content .meninas-content .meninas-yellow-container {
+    width: 100%;
+    height: 100%;
+  }
+  #explore .content .meninas-content .meninas-branch-container {
+    display: none;
+  }
+  #explore .content .meninas-content .meninas-cleaned-container {
+    display: none;
+  }
+}
 #explore .content .text-content .second .yellow {
   color: rgb(157, 134, 101);
 }
