--- a/style/style.scss
+++ b/style/style.scss
@@ -21,27 +21,6 @@
       }
     }
   }
-
-  .logo {
-    width: 215px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    img.pyramid {
-      width: 49px;
-      height: 26px;
-    }
-    h3 {
-      color: white;
-      font-family: Forum, serif;
-      font-weight: 200;
-      font-size: 28px;
-      line-height: 100%;
-      letter-spacing: 5px;
-      text-transform: uppercase;
-    }
-  }
 }
 
 @media (min-width: 1024px) and (max-width: 1919px) {
@@ -65,6 +44,30 @@
         width: 984px;
       }
     }
+  }
+}
 
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  main {
+    section {
+      h2 {
+        margin-top: 40px;
+        width: 100%;
+        font-family: Forum, serif;
+        font-weight: 400;
+        text-transform: uppercase;
+        font-size: 40px;
+        line-height: 60px;
+        letter-spacing: 5px;
+      }
+      .bar {
+        margin: 20px 0;
+        width: 728px;
+      }
+      .content {
+        width: 728px;
+      }
+    }
   }
 }
