--- a/style/video.scss
+++ b/style/video.scss
@@ -119,3 +119,51 @@
     }
   }
 }
+
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  #video {
+    padding: 0 0 40px 0;
+    .content {
+      height: 757px;
+      p {
+        display: none;
+      }
+      .video-large-container {
+        width: 728px;
+        height: 386px;
+        margin-top: 20px;
+        iframe {
+          width: 100%;
+          height: 100%;
+        }
+      }
+      .video-petite-container {
+        display: grid;
+        grid-template-columns: repeat(3, 354px);
+        grid-template-rows: 199px;
+        justify-content: space-between;
+        height: 199px;
+        margin-top: 20px;
+      }
+      .scroller-holder {
+        width: 100%;
+        .scroller {
+          height: 12px;
+          width: 100%;
+          margin-top: 20px;
+          display: grid;
+          justify-content: center;
+          grid-template-columns: repeat(7, 12px);
+          grid-template-rows: 12px;
+          column-gap: 20px;
+          align-items: center;
+          button {
+            transform: translateY(2px);
+          }
+        }
+
+      }
+    }
+  }
+}
