--- a/style/visiting.css
+++ b/style/visiting.css
@@ -93,6 +93,54 @@
     font-size: 16px;
   }
 }
+@media (min-width: 768px) and (max-width: 1023px) {
+  #visiting {
+    padding: 0 0 80px 0;
+  }
+  #visiting .content {
+    height: 1146px;
+  }
+  #visiting .content .bar {
+    margin-bottom: 40px;
+  }
+  #visiting .content .panorama-container {
+    display: grid;
+    grid-template-columns: repeat(2, 280px);
+    grid-template-rows: repeat(3, 301px);
+    row-gap: 40px;
+    width: 100%;
+    height: 983px;
+    justify-content: space-evenly;
+    align-content: center;
+  }
+  #visiting .content .panorama-container .panorama img {
+    width: 280px;
+    height: 180px;
+  }
+  #visiting .content .panorama-container .panorama h3 {
+    margin-top: 25px;
+    height: 24px;
+    font-size: 22px;
+    letter-spacing: 3px;
+  }
+  #visiting .content .panorama-container .panorama .panorama-bar {
+    height: 2px;
+    margin: 10px 0;
+  }
+  #visiting .content .panorama-container .panorama .bar-non-hover {
+    width: 150px;
+  }
+  #visiting .content .panorama-container .panorama p.top {
+    height: 21px;
+    font-size: 18px;
+  }
+  #visiting .content .panorama-container .panorama p.bottom {
+    margin-top: 10px;
+    height: 19px;
+    font-weight: 200;
+    font-size: 16px;
+  }
+}
 #visiting {
   display: flex;
   justify-content: center;
@@ -115,10 +163,6 @@
   background-color: rgb(113, 7, 7);
   height: 2px;
   transition: width 0.5s ease;
-}
-
-.panorama-bar-on-hover {
-  width: 440px !important;
 }
 
 /*# sourceMappingURL=visiting.css.map */
