--- a/style/visiting.scss
+++ b/style/visiting.scss
@@ -98,6 +98,57 @@
   }
 }
 
+@media (min-width: 768px) and (max-width: 1023px) {
+  #visiting {
+    padding: 0 0 80px 0;
+    .content {
+      height: 1146px;
+      .bar {
+        margin-bottom: 40px;
+      }
+      .panorama-container {
+        display: grid;
+        grid-template-columns: repeat(2, 280px);
+        grid-template-rows: repeat(3, 301px);
+        row-gap: 40px;
+        width: 100%;
+        height: 983px;
+        justify-content: space-evenly;
+        align-content: center;
+        .panorama {
+          img {
+            width: 280px;
+            height: 180px;
+          }
+          h3 {
+            margin-top: 25px;
+            height: 24px;
+            font-size: 22px;
+            letter-spacing: 3px;
+          }
+          .panorama-bar {
+            height: 2px;
+            margin: 10px 0;
+          }
+          .bar-non-hover {
+            width: 150px;
+          }
+          p.top {
+            height: 21px;
+            font-size: 18px;
+          }
+          p.bottom {
+            margin-top: 10px;
+            height: 19px;
+            font-weight: 200;
+            font-size: 16px;
+          }
+        }
+      }
+    }
+  }
+}
+
 #visiting {
   display: flex;
   justify-content: center;
@@ -126,8 +177,4 @@
   background-color: rgba(113, 7, 7, 1);
   height: 2px;
   transition: width 0.5s ease;
-}
-
-.panorama-bar-on-hover {
-  width: 440px !important;
 }
