--- a/style/welcome.css
+++ b/style/welcome.css
@@ -3,6 +3,9 @@
     height: 810px;
   }
   #welcome .content .text-content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
     top: 150px;
   }
   #welcome .content .text-content h1 {
@@ -11,11 +14,12 @@
     font-size: 80px;
     line-height: 90px;
     letter-spacing: 5px;
-    z-index: 2;
+    z-index: 3;
   }
   #welcome .content .text-content h4 {
     width: 445px;
     height: 33px;
+    position: absolute;
     top: 205px;
     font-weight: 300;
     font-size: 28px;
@@ -39,12 +43,29 @@
   #welcome .content .text-content .discover-button:hover {
     background-color: rgb(157, 134, 101);
   }
+  #welcome .content .joconda-holder {
+    position: relative;
+  }
+  #welcome .content .joconda-shadow {
+    position: absolute;
+    background: linear-gradient(to right, rgb(0, 0, 0), transparent);
+    z-index: 1;
+    top: 0;
+    left: 440px;
+    height: 810px;
+    width: 300px;
+  }
   #welcome .content img {
+    z-index: 0;
+    top: 0;
+    right: 0;
+    position: absolute;
     width: 1000px;
   }
   #welcome .content .welcome-slider-io {
     width: 600px;
     height: 120px;
+    position: absolute;
     font-weight: 400;
     font-size: 22px;
     line-height: 40px;
@@ -98,9 +119,15 @@
   #welcome {
     height: 585px;
   }
+  #welcome .content .text-content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
   #welcome .content .text-content h1 {
     width: 398px;
     height: 180px;
+    position: absolute;
     top: 50px;
     left: 20px;
     font-weight: 400;
@@ -108,10 +135,12 @@
     line-height: 90px;
     letter-spacing: 5px;
     text-align: left;
+    z-index: 3;
   }
   #welcome .content .text-content h4 {
     width: 445px;
     height: 28px;
+    position: absolute;
     top: 255px;
     left: 20px;
     font-weight: 300;
@@ -131,7 +160,23 @@
     text-align: center;
     vertical-align: middle;
   }
+  #welcome .content .joconda-holder {
+    position: relative;
+  }
+  #welcome .content .joconda-shadow {
+    position: absolute;
+    background: linear-gradient(to right, rgb(0, 0, 0), transparent);
+    z-index: 1;
+    top: 0;
+    left: 304px;
+    height: 525px;
+    width: 250px;
+  }
   #welcome .content img {
+    z-index: 0;
+    top: 0;
+    right: 0;
+    position: absolute;
     object-fit: cover;
     height: 525px;
     width: 700px;
@@ -141,6 +186,7 @@
     border: 2px solid red;
     width: 700px;
     height: 120px;
+    position: absolute;
     top: 465px;
     left: 304px;
   }
@@ -164,24 +210,96 @@
     background-color: white;
   }
 }
+@media (min-width: 768px) and (max-width: 1023px) {
+  #welcome {
+    height: 861px;
+  }
+  #welcome .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  #welcome .content .text-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    align-content: center;
+    width: 100%;
+    height: 165px;
+  }
+  #welcome .content .text-content h1 {
+    width: 338px;
+    height: 120px;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 60px;
+    letter-spacing: 5px;
+    text-align: center;
+    text-transform: uppercase;
+  }
+  #welcome .content .text-content h4 {
+    width: 350px;
+    font-size: 20px;
+    letter-spacing: 2px;
+  }
+  #welcome .content .text-content .discover-button {
+    display: none;
+  }
+  #welcome .content .joconda-holder {
+    width: 728px;
+    height: 546px;
+    object-fit: cover;
+  }
+  #welcome .content .joconda-holder .joconda-shadow {
+    display: none;
+  }
+  #welcome .content .joconda-holder img {
+    width: 100%;
+    height: 100%;
+  }
+  #welcome .content .welcome-slider-io {
+    height: 100px;
+    width: 401px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+  }
+  #welcome .content .welcome-slider-io .welcome-slider-io-metadata {
+    width: 71px;
+    height: 40px;
+  }
+  #welcome .content .welcome-slider-io .welcome-slider-io-pointer {
+    width: 160px;
+    height: 12px;
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+  }
+  #welcome .content .welcome-slider-io .welcome-slider-io-pointer .welcome-slider-io-point {
+    width: 12px;
+  }
+  #welcome .content .welcome-slider-io .welcome-slider-io-swiper {
+    width: 80px;
+    height: 8px;
+    display: flex;
+    justify-content: space-between;
+  }
+}
 #welcome .content {
   position: relative;
 }
-#welcome .content .text-content {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
 #welcome .content .text-content h1 {
   z-index: 2;
-  position: absolute;
   color: white;
   font-family: Forum, serif;
 }
 #welcome .content .text-content h4 {
   z-index: 2;
   font-family: Roboto, serif;
-  position: absolute;
+  font-weight: 300;
+  line-height: 100%;
   color: white;
 }
 #welcome .content .text-content .discover-button {
@@ -210,17 +328,10 @@
   background: rgb(157, 134, 101);
   cursor: pointer;
 }
-#welcome .content img {
-  z-index: 1;
-  top: 0;
-  right: 0;
-  position: absolute;
-}
 #welcome .content .welcome-slider-io {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  position: absolute;
   bottom: 0;
   right: 0;
   z-index: 100;
