--- a/style/gallery.css
+++ b/style/gallery.css
@@ -19,7 +19,6 @@
   }
   #gallery .content .container .gallery-fogging {
     height: 360px;
-    margin-bottom: 70px;
   }
 }
 @media (min-width: 1024px) and (max-width: 1919px) {
@@ -38,7 +37,25 @@
   }
   #gallery .content .container .gallery-fogging {
     height: 239px;
-    margin-bottom: 100px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1023px) {
+  #gallery {
+    height: 1220px;
+  }
+  #gallery .content .container {
+    display: none;
+  }
+  #gallery .content .container .column > div:last-child {
+    display: none;
+  }
+  #gallery .content .container > div:last-child {
+    display: none;
+  }
+}
+@media (min-width: 420px) and (max-width: 767px) {
+  #gallery {
+    height: 757px;
   }
 }
 #gallery {
@@ -48,7 +65,6 @@
 #gallery .container {
   display: flex;
   justify-content: space-between;
-  position: relative;
   z-index: -3;
 }
 #gallery .container .column {
