--- a/style/contacts.scss
+++ b/style/contacts.scss
@@ -66,6 +66,80 @@
   }
 }
 
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  #contacts {
+    .content {
+      height: 858px;
+      .container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        .description {
+          h5 {
+            width: 160px;
+            font-size: 20px;
+          }
+          ul {
+            height: 93px;
+            margin: 40px 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            li {
+              font-size: 18px;
+            }
+          }
+        }
+        #map {
+          width: 100%;
+          height: 476px;
+        }
+      }
+    }
+  }
+}
+
+
+@media (min-width: 420px) and (max-width: 767px) {
+  #contacts {
+    height: 636px;
+    .content {
+      .container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 453px;
+        .description {
+          height: 165px;
+          h5 {
+            width: 124px;
+            height: 38px;
+            font-size: 16px;
+            letter-spacing: 0;
+          }
+          ul {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            margin-top: 39px;
+            height: 87px;
+            width: 100%;
+            li {
+              height: 19px;
+              width: 100%;
+            }
+          }
+        }
+        #map {
+          width: 380px;
+          height: 248px;
+        }
+      }
+    }
+  }
+}
+
 #contacts {
   .container {
     .description {
