--- a/style/explore.css
+++ b/style/explore.css
@@ -139,8 +139,36 @@
     display: none;
   }
 }
+@media (min-width: 420px) and (max-width: 767px) {
+  #explore {
+    height: 551px;
+  }
+  #explore .content {
+    position: relative;
+  }
+  #explore .content .text-content p {
+    display: none;
+  }
+  #explore .content .meninas-content {
+    position: absolute;
+    width: 380px;
+    height: 368px;
+    top: 143px;
+    left: 20px;
+  }
+  #explore .content .meninas-content .meninas-cleaned-container {
+    display: none;
+  }
+  #explore .content .meninas-content .meninas-branch-container {
+    display: none;
+  }
+}
 #explore .content .text-content .second .yellow {
   color: rgb(157, 134, 101);
+}
+#explore .content .meninas-content img {
+  width: 100%;
+  height: 100%;
 }
 
 /*# sourceMappingURL=explore.css.map */
