--- a/style/footer.css
+++ b/style/footer.css
@@ -6,8 +6,22 @@
     width: 1440px;
   }
   footer .content .logo {
+    width: 195px;
     top: 75px;
     left: 0;
+  }
+  footer .content .logo .pyramid {
+    position: absolute;
+    top: 9px;
+  }
+  footer .content .logo h3 {
+    position: absolute;
+    width: 120px;
+    height: 31px;
+    top: 11px;
+    left: 75px;
+    font-size: 28px;
+    letter-spacing: 5px;
   }
   footer .content nav {
     width: 363px;
@@ -57,13 +71,7 @@
     height: 26px;
   }
   footer .content .logo h3 {
-    font-family: Forum, serif;
-    font-weight: 400;
     font-size: 28px;
-    line-height: 100%;
-    letter-spacing: 5px;
-    text-transform: uppercase;
-    color: white;
     display: inline-block;
     width: 120px;
     margin-left: 20px;
@@ -94,6 +102,55 @@
     top: 246px;
   }
 }
+@media (min-width: 768px) and (max-width: 1023px) {
+  footer {
+    height: 411px;
+  }
+  footer .content {
+    width: 728px;
+  }
+  footer .content .logo {
+    width: 205px;
+    height: 41px;
+    top: 40px;
+  }
+  footer .content .logo .pyramid {
+    width: 49px;
+    height: 26px;
+  }
+  footer .content .logo h3 {
+    margin-left: 25px;
+    display: inline-block;
+    font-size: 28px;
+    letter-spacing: 5px;
+  }
+  footer .content nav {
+    width: 393px;
+    height: 121px;
+    top: 57px;
+    left: 279px;
+  }
+  footer .content nav ul li a {
+    font-size: 18px;
+    letter-spacing: 2px;
+  }
+  footer .content .social {
+    border: 2px solid red;
+    width: 340px;
+    height: 48px;
+    top: 220px;
+    left: 298px;
+  }
+  footer .content .bar {
+    height: 1px;
+    width: 100%;
+    top: 308px;
+  }
+  footer .content .bottom {
+    height: 102px;
+    top: 309px;
+  }
+}
 footer {
   display: flex;
   justify-content: center;
@@ -105,6 +162,15 @@ footer .content {
 }
 footer .content .logo {
   position: absolute;
+}
+footer .content .logo h3 {
+  display: inline-block;
+  font-family: Forum, serif;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: white;
+  line-height: 100%;
+  letter-spacing: 5px;
 }
 footer .content nav {
   position: absolute;
@@ -135,9 +201,27 @@ footer .content .social {
   display: flex;
   justify-content: space-between;
 }
-footer .content .social img {
+footer .content .social a {
   width: 48px;
   height: 48px;
+  display: flex;
+  justify-content: space-evenly;
+  align-content: space-evenly;
+  align-items: center;
+  border: 1px solid rgb(102, 102, 102);
+  border-radius: 50%;
+  transition: all ease 0.4s;
+}
+footer .content .social a svg {
+  fill: white;
+  width: 24px;
+  height: 24px;
+}
+footer .content .social a:hover {
+  border-color: rgb(157, 134, 101);
+}
+footer .content .social a:hover svg {
+  fill: rgb(157, 134, 101);
 }
 footer .content .bar {
   height: 3px;
@@ -163,6 +247,94 @@ footer .content .bottom ul li {
   line-height: 22px;
   letter-spacing: 2px;
   color: white;
+}
+
+@media (min-width: 420px) and (max-width: 767px) {
+  footer {
+    height: 400px;
+  }
+  footer .content {
+    width: 380px;
+  }
+  footer .content .logo {
+    position: absolute;
+    width: 136px;
+    height: 20px;
+    top: 40px;
+  }
+  footer .content .logo .pyramid {
+    position: absolute;
+    width: 29px;
+    height: 16px;
+  }
+  footer .content .logo h3 {
+    position: absolute;
+    left: 49px;
+    top: 1px;
+    width: 85px;
+    height: 18px;
+    font-size: 16px;
+    letter-spacing: 5px;
+  }
+  footer .content nav {
+    width: 100%;
+    height: 88px;
+    top: 90px;
+  }
+  footer .content nav ul {
+    display: grid;
+    align-content: space-between;
+    justify-content: space-between;
+    grid-template-columns: repeat(3, 77px);
+    grid-template-rows: repeat(2, 44px);
+  }
+  footer .content nav ul li {
+    font-size: 16px;
+    font-weight: 200;
+    line-height: 100%;
+    letter-spacing: 2px;
+  }
+  footer .content nav ul a {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 100%;
+  }
+  footer .content .social {
+    position: absolute;
+    width: 260px;
+    height: 48px;
+    top: 208px;
+    left: 60px;
+  }
+  footer .content .social a {
+    width: 48px;
+    height: 48px;
+  }
+  footer .content .social a svg {
+    width: 24px;
+    height: 24px;
+  }
+  footer .content .bar {
+    width: 420px;
+    height: 2px;
+    top: 296px;
+  }
+  footer .content .bottom {
+    top: 338px;
+  }
+  footer .content .bottom ul {
+    height: 22px;
+  }
+  footer .content .bottom ul li {
+    font-size: 16px;
+    line-height: 22px;
+    letter-spacing: 2px;
+  }
+  footer .content .bottom ul li:last-child {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=footer.css.map */
