--- a/style/style.scss
+++ b/style/style.scss
@@ -51,6 +51,9 @@
 @media (min-width: 768px) and (max-width: 1023px) {
   main {
     section {
+      .content {
+        width: 728px;
+      }
       h2 {
         margin-top: 40px;
         width: 100%;
@@ -62,11 +65,34 @@
         letter-spacing: 5px;
       }
       .bar {
-        margin: 20px 0;
+        margin: 20px 0; // 40px indeed
         width: 728px;
       }
+    }
+  }
+}
+
+
+@media (min-width: 420px) and (max-width: 767px) {
+  main {
+    section {
       .content {
-        width: 728px;
+        width: 380px;
+      }
+      .bar {
+        margin: 20px 0 40px 0;
+        width: 380px;
+      }
+      h2 {
+        margin-top: 40px;
+        height: 40px;
+        width: 100%;
+        font-family: Forum, serif;
+        font-weight: 400;
+        font-size: 28px;
+        line-height: 40px;
+        letter-spacing: 5px;
+        text-transform: uppercase;
       }
     }
   }
