--- a/style/tickets.css
+++ b/style/tickets.css
@@ -195,6 +195,158 @@
     z-index: 100;
   }
 }
+@media (min-width: 768px) and (max-width: 1023px) {
+  #tickets {
+    padding: 0 0 40px 0;
+  }
+  #tickets .content {
+    height: 593px;
+  }
+  #tickets .content .container {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+  }
+  #tickets .content .container img {
+    width: 444px;
+    height: 340px;
+  }
+  #tickets .content .container .ticket-type {
+    display: none;
+  }
+  #tickets .content .container .amount {
+    position: relative;
+    height: 470px;
+    width: 175px;
+  }
+  #tickets .content .container .amount h5 {
+    font-size: 28px;
+    height: 32px;
+  }
+  #tickets .content .container .amount .ticket-pick {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    height: 86px;
+  }
+  #tickets .content .container .amount .ticket-pick label {
+    font-size: 22px;
+  }
+  #tickets .content .container .amount .ticket-pick .counter {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 175px;
+    height: 50px;
+    border-width: 3px;
+  }
+  #tickets .content .container .amount .ticket-pick .counter button {
+    height: 38px;
+    width: 41px;
+    font-size: 32px;
+  }
+  #tickets .content .container .amount .ticket-pick .counter input {
+    width: 41px;
+    font-size: 22px;
+  }
+  #tickets .content .container .amount .basic {
+    top: 71px;
+  }
+  #tickets .content .container .amount .senior {
+    top: 182px;
+  }
+  #tickets .content .container .amount #total-prise {
+    position: absolute;
+    width: 175px;
+    height: 33px;
+    top: 307px;
+  }
+  #tickets .content .container .amount #buy {
+    position: absolute;
+    width: 175px;
+    height: 50px;
+    top: 381px;
+    font-size: 22px;
+  }
+}
+@media (min-width: 420px) and (max-width: 767px) {
+  #tickets {
+    height: 759px;
+  }
+  #tickets .content .container {
+    position: relative;
+  }
+  #tickets .content .container img {
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
+  }
+  #tickets .content .container .ticket-type {
+    display: none;
+  }
+  #tickets .content .container .amount {
+    position: absolute;
+    width: 175px;
+    height: 286px;
+    top: 200px;
+    left: 102px;
+  }
+  #tickets .content .container .amount h5 {
+    width: 100%;
+    text-align: center;
+    font-size: 16px;
+    letter-spacing: 0;
+  }
+  #tickets .content .container .amount .ticket-pick {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    width: 175px;
+    height: 84px;
+  }
+  #tickets .content .container .amount .ticket-pick .counter {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 50px;
+  }
+  #tickets .content .container .amount .ticket-pick .counter button {
+    height: 38px;
+    width: 41px;
+    font-size: 32px;
+  }
+  #tickets .content .container .amount .ticket-pick .counter input {
+    width: 41px;
+    font-size: 22px;
+  }
+  #tickets .content .container .amount .basic {
+    top: 39px;
+  }
+  #tickets .content .container .amount .senior {
+    top: 143px;
+  }
+  #tickets .content .container .amount #total-prise {
+    position: absolute;
+    width: 100%;
+    height: 19px;
+    top: 267px;
+    text-align: center;
+    font-size: 16px;
+  }
+  #tickets .content .container .amount #buy {
+    position: absolute;
+    top: 326px;
+    width: 100%;
+    height: 50px;
+    font-size: 16px;
+    letter-spacing: 2px;
+  }
+}
 #tickets .content .container h5 {
   font-family: Roboto, sans-serif;
   font-weight: 700;
