--- a/style/video.css
+++ b/style/video.css
@@ -36,27 +36,14 @@
     width: 452px;
     height: 254px;
   }
-  #video div.content .scroller-holder {
-    display: flex;
-    justify-content: center;
+  #video div.content .scroller {
     margin-top: 40px;
-  }
-  #video div.content .scroller-holder .scroller {
+    margin-left: 640px;
     width: 200px;
     height: 12px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    align-content: center;
   }
-  #video div.content .scroller-holder .scroller .arrow-holder {
-    width: 10px;
-    height: 12px;
-    margin-top: 8px;
-  }
-  #video div.content .scroller-holder .scroller .point-holder {
+  #video div.content .scroller button {
     width: 12px;
-    height: 12px;
   }
 }
 @media (min-width: 1024px) and (max-width: 1919px) {
@@ -66,7 +53,6 @@
   #video .content {
     height: 881px;
     position: relative;
-    border: 2px solid red;
   }
   #video .content h2 {
     height: 75px;
@@ -88,19 +74,14 @@
     grid-template-rows: repeat(1, 170px);
     justify-content: space-between;
   }
-  #video .content .scroller-holder {
-    position: absolute;
-    bottom: 0;
+  #video .content .scroller {
     height: 17px;
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(7, 12px);
-    grid-template-rows: 1fr;
-    column-gap: 20px;
-    border: 2px solid red;
+    width: 200px;
+    margin-left: 392px;
+    margin-top: 40px;
     z-index: 100;
   }
-  #video .content .scroller-holder img {
+  #video .content .scroller button {
     height: 12px;
     width: 12px;
   }
@@ -125,30 +106,90 @@
     height: 100%;
   }
   #video .content .video-petite-container {
-    display: grid;
-    grid-template-columns: repeat(3, 354px);
-    grid-template-rows: 199px;
     justify-content: space-between;
+    margin-top: 20px;
+    display: flex;
+    width: 100%;
     height: 199px;
-    margin-top: 20px;
   }
-  #video .content .scroller-holder {
-    width: 100%;
+  #video .content .video-petite-container iframe {
+    width: 354px;
+    height: 199px;
   }
-  #video .content .scroller-holder .scroller {
+  #video .content .video-petite-container > div:last-child {
+    display: none;
+  }
+  #video .content .video-petite-container > div:last-child iframe {
+    display: none;
+  }
+  #video .content .scroller {
     height: 12px;
-    width: 100%;
+    width: 200px;
     margin-top: 20px;
-    display: grid;
-    justify-content: center;
-    grid-template-columns: repeat(7, 12px);
-    grid-template-rows: 12px;
-    column-gap: 20px;
+    margin-left: 269px;
+  }
+  #video .content .scroller button {
+    width: 10px;
+    height: 10px;
+  }
+}
+@media (min-width: 420px) and (max-width: 767px) {
+  #video {
+    height: 555px;
+  }
+  #video .content {
+    position: relative;
+  }
+  #video .content p {
+    display: none;
+  }
+  #video .content .video-large-container {
+    position: absolute;
+    width: 380px;
+    height: 226px;
+    top: 100px;
+  }
+  #video .content .video-petite-container {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
+    position: absolute;
+    width: 380px;
+    height: 101px;
+    top: 366px;
   }
-  #video .content .scroller-holder .scroller button {
-    transform: translateY(2px);
+  #video .content .video-petite-container div:last-child {
+    display: none;
   }
+  #video .content .video-petite-container .video-petite-holder {
+    width: 180px;
+    height: 101px;
+  }
+  #video .content .scroller {
+    position: absolute;
+    width: 174px;
+    height: 8px;
+    top: 507px;
+    left: 103px;
+    transform: translateY(-7px);
+  }
+}
+#video iframe {
+  width: 100%;
+  height: 100%;
+}
+#video .scroller {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+}
+#video .scroller button {
+  height: 100%;
+  background-color: white;
+}
+#video .scroller img {
+  height: 100%;
 }
 
 /*# sourceMappingURL=video.css.map */
