--- a/style/video.scss
+++ b/style/video.scss
@@ -1,28 +1,22 @@
-
 @media (min-width: 1920px) {
   #video {
     padding: 75px 0;
-
     div.content {
       height: 1246px;
-
       h2 {
         width: 610px;
         display: inline-block;
       }
-
       p {
         display: inline-block;
         width: 720px;
         margin-left: 105px;
       }
-
       .video-large-container {
         position: relative;
         height: 735px;
         width: 100%;
         margin-top: 75px;
-
         .video-large {
           height: 100%;
           width: 100%;
@@ -31,41 +25,22 @@
           left: 0;
         }
       }
-
       .video-petite-container {
         display: flex;
         justify-content: space-between;
         margin-top: 42px;
-
         .video-petite-holder {
           width: 452px;
           height: 254px;
         }
       }
-
-      .scroller-holder {
-        display: flex;
-        justify-content: center;
+      .scroller {
         margin-top: 40px;
-
-        .scroller {
-          width: 200px;
-          height: 12px;
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          align-content: center;
-
-          .arrow-holder {
-            width: 10px;
-            height: 12px;
-            margin-top: 8px;
-          }
-
-          .point-holder {
-            width: 12px;
-            height: 12px;
-          }
+        margin-left: 640px;
+        width: 200px;
+        height: 12px;
+        button {
+          width: 12px;
         }
       }
     }
@@ -79,7 +54,6 @@
     .content {
       height: 881px;
       position: relative;
-      border: 2px solid red;
       h2 {
         height: 75px;
       }
@@ -100,18 +74,13 @@
         grid-template-rows: repeat(1, 170px);
         justify-content: space-between;
       }
-      .scroller-holder {
-        position: absolute;
-        bottom: 0;
+      .scroller {
         height: 17px;
-        width: 100%;
-        display: grid;
-        grid-template-columns: repeat(7, 12px);
-        grid-template-rows: 1fr;
-        column-gap: 20px;
-        border: 2px solid red;
+        width: 200px;
+        margin-left: 392px;
+        margin-top: 40px;
         z-index: 100;
-        img {
+        button {
           height: 12px;
           width: 12px;
         }
@@ -139,31 +108,99 @@
         }
       }
       .video-petite-container {
-        display: grid;
-        grid-template-columns: repeat(3, 354px);
-        grid-template-rows: 199px;
         justify-content: space-between;
-        height: 199px;
         margin-top: 20px;
-      }
-      .scroller-holder {
+        display: flex;
         width: 100%;
-        .scroller {
-          height: 12px;
-          width: 100%;
-          margin-top: 20px;
-          display: grid;
-          justify-content: center;
-          grid-template-columns: repeat(7, 12px);
-          grid-template-rows: 12px;
-          column-gap: 20px;
-          align-items: center;
-          button {
-            transform: translateY(2px);
-          }
-        }
+        height: 199px;
 
+        iframe {
+          width: 354px;
+          height: 199px;
+        }
+      }
+      .video-petite-container > div:last-child {
+        display: none;
+        iframe {
+          display: none;
+        }
+      }
+      .scroller {
+        height: 12px;
+        width: 200px;
+        margin-top: 20px;
+        margin-left: 269px;
+        button {
+          width: 10px;
+          height: 10px;
+        }
       }
     }
   }
 }
+
+
+@media (min-width: 420px) and (max-width: 767px) {
+  #video {
+    height: 555px;
+    .content {
+      position: relative;
+      p {
+        display: none;
+      }
+      .video-large-container {
+        position: absolute;
+        width: 380px;
+        height: 226px;
+        top: 100px;
+      }
+      .video-petite-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: absolute;
+        width: 380px;
+        height: 101px;
+        top: 366px;
+        div:last-child {
+          display: none;
+        }
+        .video-petite-holder {
+          width: 180px;
+          height: 101px;
+        }
+      }
+      .scroller {
+        position: absolute;
+        width: 174px;
+        height: 8px;
+        top: 507px;
+        left: 103px;
+        transform: translateY(-7px);
+      }
+    }
+  }
+}
+
+
+
+#video {
+  iframe {
+    width: 100%;
+    height: 100%;
+  }
+  .scroller {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    button {
+      height: 100%;
+      background-color: white;
+    }
+    img {
+      height: 100%;
+    }
+  }
+}
+
