--- a/style/visiting.css
+++ b/style/visiting.css
@@ -141,9 +141,52 @@
     font-size: 16px;
   }
 }
+@media (min-width: 420px) and (max-width: 767px) {
+  #visiting .content {
+    height: 2153px;
+  }
+  #visiting .content .panorama-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 1970px;
+  }
+  #visiting .content .panorama-container .panorama {
+    width: 280px;
+    height: 295px;
+  }
+  #visiting .content .panorama-container .panorama img {
+    height: 180px;
+  }
+  #visiting .content .panorama-container .panorama h3 {
+    margin-top: 25px;
+    height: 20px;
+  }
+  #visiting .content .panorama-container .panorama .panorama-bar {
+    margin: 10px 0;
+  }
+  #visiting .content .panorama-container .panorama p {
+    font-size: 16px;
+    letter-spacing: 0;
+  }
+  #visiting .content .panorama-container .panorama p.bottom {
+    margin-top: 10px;
+  }
+}
 #visiting {
   display: flex;
   justify-content: center;
+}
+#visiting .content .panorama-container .panorama img {
+  width: 100%;
+}
+#visiting .content .panorama-container .panorama a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: black;
 }
 #visiting .content .panorama-container .panorama h3 {
   width: 100%;
@@ -156,7 +199,6 @@
   font-family: Roboto, sans-serif;
   line-height: 100%;
   font-weight: 200;
-  color: rgb(0, 0, 0);
 }
 
 .panorama-bar {
