--- a/style/welcome.css
+++ b/style/welcome.css
@@ -218,6 +218,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
   }
   #welcome .content .text-content {
     display: flex;
@@ -285,6 +286,111 @@
     height: 8px;
     display: flex;
     justify-content: space-between;
+  }
+}
+@media (min-width: 420px) and (max-width: 767px) {
+  #welcome .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    height: 544px;
+  }
+  #welcome .content .text-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 129px;
+    width: 280px;
+  }
+  #welcome .content .text-content h1 {
+    width: 253px;
+    height: 80px;
+    text-align: center;
+    font-size: 28px;
+    letter-spacing: 5px;
+    font-weight: 400;
+    line-height: 40px;
+    text-transform: uppercase;
+  }
+  #welcome .content .text-content h4 {
+    width: 280px;
+    height: 19px;
+    text-align: center;
+    font-size: 16px;
+    letter-spacing: 2px;
+    font-weight: 300;
+    line-height: 100%;
+  }
+  #welcome .content .text-content .discover-button {
+    display: none;
+  }
+  #welcome .content .joconda-holder {
+    position: absolute;
+    width: 380px;
+    height: 285px;
+    top: 179px;
+    object-fit: cover;
+  }
+  #welcome .content .joconda-holder .joconda-shadow {
+    display: none;
+  }
+  #welcome .content .joconda-holder img {
+    width: 100%;
+    height: 100%;
+  }
+  #welcome .content .welcome-slider-io {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    width: 230px;
+    height: 40px;
+    border: 2px solid red;
+    transform: translateY(-20px);
+  }
+  #welcome .content .welcome-slider-io .welcome-slider-io-metadata {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    width: 50px;
+    height: 40px;
+  }
+  #welcome .content .welcome-slider-io .welcome-slider-io-metadata .bar {
+    background-color: white;
+    height: 20px;
+    width: 2px;
+    transform: translateY(9px);
+  }
+  #welcome .content .welcome-slider-io .welcome-slider-io-pointer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 75px;
+    height: 7px;
+  }
+  #welcome .content .welcome-slider-io .welcome-slider-io-pointer .welcome-slider-io-point {
+    width: 7px;
+    height: 7px;
+    background-color: white;
+  }
+  #welcome .content .welcome-slider-io .welcome-slider-io-swiper {
+    width: 55px;
+    height: 8px;
+    transform: translateY(-4px);
+  }
+  #welcome .content .welcome-slider-io .welcome-slider-io-swiper div {
+    width: 20px;
+    height: 10px;
+  }
+  #welcome .content .welcome-slider-io .welcome-slider-io-swiper div img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
   }
 }
 #welcome .content {
@@ -358,7 +464,12 @@
 #welcome .content .welcome-slider-io .welcome-slider-io-pointer .welcome-slider-io-point:hover {
   background-color: rgb(157, 134, 101);
 }
-#welcome .content .welcome-slider-io .welcome-slider-io-left-arrow img {
+#welcome .content .welcome-slider-io .welcome-slider-io-swiper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#welcome .content .welcome-slider-io .welcome-slider-io-swiper .welcome-slider-io-left-arrow img {
   transform: scaleX(-1);
 }
 
